Add occupation page

--- a/docs/lessons/occupation-arrangements.mdx
+++ b/docs/lessons/occupation-arrangements.mdx
@@ -19,434 +19,144 @@ with your sentence structure.
 
 :::warning Translation challenge for "job" and "work"
 
-Within a profession, one has various job duties or tasks and these are often
+Within a profession, one has various job duties or tasks, and these are often
 translated with the generic word for doing (<HisyeoWord is='tûu'/>). There is no
-exact equivalent word for the English catch-all words "job" and "work"; if you
-are speaking of specialization and expertise, use <HisyeoWord is='wêloi'/>; if
-you are thinking of a task or a group of tasks (whether specific or not), use <HisyeoWord is='tûu'/>.
+exact equivalent word for the English catch-all words "job" and "work".
+
+If you are speaking of specialization and expertise, use <HisyeoWord is='wêloi'/>.
+
+If you are thinking of a task or a group of tasks (whether specific or not), use <HisyeoWord is='tûu'/>.
 
 :::
 
-## Occupations/Profressions
-
-There are no specific words for any profession in Hîsyêô. Instead, speakers must
-use compounds, agent phrase, and relative clauses to describe what the
-occupation is. Compounds can be creative, simplified, specific, or illusive.
-Below, we will try to provide some good basic ones to start with but these do
-not have to be followed if you'd like to express it in a different way.
-
-### Society
- 
-### Technology
-
-### Learning
-
-### Industry
-
-### Nature
-
-### Family
-
-### Arts & Entertainment
-
-### Conflict & Justice
-
-### Beauty
-
-### Arts & Entertainment
-
-Actor acteur / actrice
-ônî wêîlun dîzel non/kûnbî
-
-Architect architecte / architecte
-foko yôcno îlê
-
-Comedian comédien / comédienne
-ônî yoûmok
-
-Composer compositeur / compositrice
-foko kontol
-
-Dancer danseur / danseuse
-ônî cifulo
-
-Designer, draughtsman dessinateur / dessinatrice
-
-
-Film producer producteur / productrice
-ônî tûu non
-
-Painter, artist peintre / peintre
-ônî toswîl
-
-Photographer photographe / photographe
-ônî sobis yê êfun în dêko
-
-Playwright dramaturge / dramaturge
-ônî cukto yê kîso kûnbî
-
-Singer chanteur / chanteuse
-ônî kontol în ôîtun
-
-TV anchor présentateur / présentatrice
-ônî hobîyô non
-
-### Society
-There are many words describing manager, director and higher-ups in general. One word not included in the list below is un(e) responsable. While this looks like the English adjective responsible, it translates to head, supervisor and manager in French.
-
-The words for personal assistant are un(e) assistant(e) de direction and secrétaire de direction. The word direction here means management.
-
-Je suis agent de change. I'm a stockborker.
-Businessman un homme d’affaires
-Businesswoman une femme d’affaires
-
-Accountant comptable / comptable
-ônî sobis
-
-Receptionist réceptionniste / réceptionniste
-ônî bôsol yôcno kon monodo
-
-Salesperson vendeur / vendeuse
-ônî kôto kon wedo
-
-Secretary secrétaire / secrétaire
-ônî yoldûn yê umo sonkon
-
-Staff member employé / employée
-kukwon
-
-Stockbroker agent de change / agente de change
-ônî wedo yê kûngîyo xokôn
-
-Manager directeur / directrice
-
-Manager gérant / gérante
-
-Merchant marchand / marchande
-ônî wedo
-
-Trainee stagiaire / stagiaire
-
-### Industry
-Knowing the vocabulary for jobs in the trades is very important if you live in France and need to find a repairman.
-
-According to Wordreference.com, the word for handyman is un homme à tout faire, which translates to a man who does everything. Another word for handyman is bricoleur, which comes from the verb bricoler. Bricoler means to tinker.
-
-Je suis électricien. I'm an electrician.
-
-Appliance repair man dépanneur
-ônî xîûfû yê culono
-
-Carpenter charpentier / charpentière
-ônî nomû
-
-Electrician électricien / électricienne
-ônî cingî
-
-Engineer ingénieur / ingénieure
-ônî ondo yôcno kon kôson
-
-Handyman homme à tout faire
-ônî xîûfû yê niwos
-
-Mason maçon
-ônî wêko dîncî
-
-Mechanic mécanicien / mécanicienne
-ônî xîûfû yê oûtô
-
-Painter peintre en bâtiment
-ônî toswîl
-
-Plumber plombier
-ônî bôsol môkôfo fecko
-
-### Learning
-There are many words for teacher and this can cause confusion. At the elementary
-school level, the word for teacher is un instituteur, une institutrice.
-
-Another word that is used at the elementary school level is un maître, une maîtresse. At the junior high school and high school level the word is un(e) enseignant(e).
-
-The word un professeur can be used for both high school and university level teachers and professors. The slang word for un professeur (only exists in the masculine form) is un(e) prof.
-
-Je suis écrivaine. I'm a writer.
-
-
-Editor rédacteur / rédactrice
-ônî xîûfû yê cukto
-
-Illustrator illustrateur / illustratrice
-ônî toswîl kon conwêbo
-
-Interpreter interprète / interprète
-ônî dônûxin yê kôto
-
-Journalist, reporter journaliste / journaliste
-ônî sobis yê sîkîn sonkon
-
-Novelist romancie / romancière
-ônî cukto yê kîso kîldo
-
-Student étudiant / étudiante
-ônî bêûdo
-
-Teacher professeur, instituteur, enseignant / professeur, institutrice, enseignante
-foko bêûdo
-
-Writer écrivain(e) / auteur
-ônî cukto
-
-
-### Nature
-In modern language the word for waiter is un serveur. Many people like to use the word un garçon, but this term has become quite dated.
-
-The word for waitress is simply une serveuse. In the restaurant setting the French differentiate between somebody who just physically prepares food and a grand master of high-level cooking. A lower-level cook is un cuisinier (une cuisinière) and a higher-level chef is un/une chef.
-
-Je suis chef. I'm a chef.
-
-
-Baker boulanger / boulangère
-ônî bîek
-
-Butcher boucher / bouchère
-ônî ondo oksûn
-
-Brewer brasseur / brasseuse
-ônî ondo yê îskô cûbû
-
-Chef chef / chef
-ônî ondo yê côûfon
-
-Cook cuisinier / cuisinière
-ônî côûfon
-
-Farmer agriculteur / agricultrice
-ônî lîun yê mokon
-
-Pastry chef pâtissier / pâtissière
-ônî bîek yê kûkmut ûn cîbon
-
-Pork butcher charcutier / charcutière
-ônî ondo oksûn dônûs
-
-Waiter, waitress serveur / serveuse
-ônî yoldûn yê mîêbil kon mokon
-
-### Government & Town Services
-In politics, it is seen as impolite to refer to a politician as un(e) politique. It is more polite to say, un homme politique or une femme politique.
-
-It is noteworthy that the word for soldier only exists in the masculine form: un soldat. There is no feminine form.
-
-Je suis soldat. I'm a soldier.
-
-Civil servant fonctionnaire / fonctionnaire
-ônî yoldûn fîmôsyôs
-
-Diplomat diplomate / diplomate
-ônî hobîyô yê yôcno bolutê
-
-Fireman pompier
-ônî môtô
-
-Judge juge
-ônî tûlokon
-
-Police officer policier, agent de police policière
-ônî cixîn
-
-Politician homme / femme politique
-ônî obûlû yê gonîso fîmôsyôs
-
-Prosecutor procureur
-ônî fohoso yê fûtsûn
-
-Soldier soldat
-ônî oklumun
-
-Mail carrier facteur / factrice
-ônî okôt yê lufono
-
-### Homes & Real Estate
-There are several words for maid with varying levels of politeness. A maid in a house is une femme de ménage and a maid in a hotel is une femme de chambre. A maid in a house can also be called une domestique. The term, une bonne also means housemaid but is outdated and most likely considered impolite.
-
-Gardener jardinier / jardinière
-ônî ondo comen
-
-Maid femme de chambre
-ônî mûfêû yê niwos
-
-Real-estate agent agent immobilier / agente immobilier
-ônî wedo yê niwos
-
-### Medical
-In French, the words un docteur and un médecin can be used interchangeably for doctor. Interestingly, there is no feminine for for either of these terms. For the words psychiatre and psychologue below, both the -p and -s must be pronounced French, just as the -s and -t must be pronounced in the English word ‘stop’.
-
-Je suis médecin. I'm a doctor.
-
-Dentist dentiste
-ônî cîgîlsu hokôlî
-
-Doctor médecin / médecin
-ônî cîgîlsu solîlo
-
-Nurse infirmier / infirmière
-ônî yoldûn cîgîlsu
-
-Optician opticien / opticienne
-ônî cîgîlsu gûêyû
-
-Pharmacist pharmacien / pharmacienne
-ônî cûdo cîgîlsu
-
-Nutritionist nutritionniste
-ônî cûdo yê yôcno kon mokon sohoû
-
-Psychiatrist psychiatre
-ônî cûdo yê cîgîlsu dûuncît
-
-Psychologist psychologue
-ônî cîgîlsu dûuncît
-
-Veterinarian vétérinaire
-ônî cîgîlsu zonwul
-
-### Retail
-In French the word for sales clerk (un vendeur, une vendeuse) can also translate to sales man or saleswoman. Note that the two terms for bagger listed below only are used in Canada and not in France.
-
-Bagger ensacheur, ensacheuse, aide de caisse
-
-
-Cashier cassier / cassière
-
-
-Sales clerk vendeur / venduse
-
-
-Stock boy magasinier
-
-
-### Religion
-Maybe the French language will one day become more advanced and more open, but
-for now the following terms for religious leaders only exist in the masculine
-forms.
-
-
-Bishop evêque
-
-
-Monk moine
-
-
-Nun religieuse, sœur
-
-
-Reverend révérend
-
-
-Priest prêtre
-
-
-Rabbi rabbin
-
-
-### Science & Exploration
-Almost all science-related words are the same in English and French. Hence,
-almost all of the terms below are the same in both languages. The word or
-scientist is un(e) scientifique.
-
-Je suis scientifique. I'm a scientist.
-
-
-Astronaut astronaute
-
-
-Chemist chimiste
-
-
-Computer engineer informaticien / informaticienne
-
-
-Information specialist documentaliste
-
-
-Physicist physicien / physicienne
-
-
-Researcher chercheur, chercheuse
-
-
-Scientist scientifique
-
-
-### Services
-The French word hairdresser is un coiffeur or une coiffeuse. The word coffeur
-can also mean barber. In French, un barbier is somebody who only trims beards.
-An, ouvrier is a general term for a manual laborer or somebody who works with
-their hands.
-
-Beautician esthéticienne
-
-
-Hairdresser coiffeur / coiffeuse
-
-
-House cleaner homme de ménage / femme de ménage
-
-
-Janitor gardien / gardienne
-
-
-Laborer, worker ouvrier / /ouvrière
-
-
-Lawyer avocat / avocate
-
-
-Surveyor géomètre-expert
-
-
-Sports
-
-
-Coach entraîneur
-
-
-Lifeguard maître-nageur, surveillant de baignade / surveillante de baignade
-
-
-Physical therapist kinésithérapeute
-
-
-Professional athlete athlète professionnel / athlète professionnelle
-
-
-Referee arbitre
-
-
-Transportation
-
-
-Bus driver conducteur d’autobus / conductrice d’autobus
-
-
-Engineer (train) conducteur, conductrice
-
-
-Flight attendant steward / hôtesse de l’air
-
-
-Pilot pilote
-
-
-Taxi driver chauffeur de taxi
-
-
-## Questions
-
-To ask somebody their profession, say, “Quel est votre méter?” or “Quelle est votre profession?”.
-
-When answering this question, treat the profession like an adjective. For example, to say I’m a dentist, say: “Je suis dentiste”.
-
-Do not use the indefinite article un or une. Use the indefinite article if you want to quality the sentence with an adjective. For example, “Je suis un bon dentist” (I’m a good dentist).
+<HisyeoTabs></HisyeoTabs>
+
+## Arts & Entertainment
+
+| English          | Hîsyêô                                               | Literal Meaning              |
+|------------------|------------------------------------------------------|------------------------------|
+| Actor            | <HisyeoText> ônî wêîlun non            </HisyeoText> | Show Behaver                 |
+| Architect        | <HisyeoText> foko yôcno îlê            </HisyeoText> | Building plan maker          |
+| Comedian         | <HisyeoText> ônî yoûmok                </HisyeoText> | The humorous one             |
+| Composer         | <HisyeoText> foko kontol               </HisyeoText> | Music creator                |
+| Dancer           | <HisyeoText> ônî cifulo                </HisyeoText> | The dancing one              |
+| Film producer    | <HisyeoText> foko non                  </HisyeoText> | Show creator                 |
+| Painter / Artist | <HisyeoText> ônî toswîl kolowu         </HisyeoText> | Art drawer                   |
+| Photographer     | <HisyeoText> ônî sobis yê êfun în dêko </HisyeoText> | Recorder of viewable moments |
+| Playwright       | <HisyeoText> ônî cukto yê non kûnbî    </HisyeoText> | Writer of stage shows        |
+| Singer           | <HisyeoText> ônî kontol în ôîtun       </HisyeoText> | Vocal performer              |
+| TV anchor        | <HisyeoText> ônî hobîyô non            </HisyeoText> | TV announcer                 |
+
+## Society & Business
+
+| English      | Hîsyêô                         | Literal Meaning                      |
+|--------------|--------------------------------|--------------------------------------|
+| Accountant   | ônî sobis munî                 | Money recorder                       |
+| Receptionist | ônî wuîtsî yê yôcno kon monodo | Maintainer of the meeting plan       |
+| Salesperson  | ônî ondô yê kôlmûdul           | Preparer of purchases                |
+| Secretary    | ônî yoldûn yê umo sonkon       | A helpful one of an important person |
+| Staff member | kukwon                         | Member / Worker                      |
+| Stockbroker  | ônî wedo yê kûngîyo xokôn      | Exchanger of company units           |
+| Merchant     | ônî wedo yê conwêbo            | Exchanger of goods                   |
+
+## Industry & Trades
+
+| English            | Hîsyêô                      | Literal Meaning                |
+|--------------------|-----------------------------|--------------------------------|
+| Appliance repairer | ônî xîûfû yê culono         | Fixer of machines              |
+| Carpenter          | ônî nomû                    | The wood one                   |
+| Electrician        | ônî cingî                   | The electricity one            |
+| Engineer           | ônî ondo yê yôcno kon kôson | Preparer of construction plans |
+| Handyman           | ônî xîûfû yê niwos          | Fixer of houses                |
+| Mason              | ônî kôson dîncî             | Block builder                  |
+| Mechanic           | ônî xîûfû yê oûtô           | Fixer of cars                  |
+| Painter (House)    | ônî wêko lôngi              | Color applyer                  |
+| Plumber            | ônî wuîtsî yê môkôfo fecko  | Maintainer of liquid pipes     |
+
+## Learning
+
+| English     | Hîsyêô                    | Literal Meaning              |
+|-------------|---------------------------|------------------------------|
+| Editor      | ônî xîûfû yê cukto        | Fixer of text                |
+| Illustrator | ônî toswîl kon conwêbo    | Product-related drawer       |
+| Interpreter | ônî dônûxin yê kôto       | Conversion one of speech     |
+| Journalist  | ônî sobis yê sîkîn sonkon | Recorder of important events |
+| Novelist    | ônî cukto yê tômôs        | Writer of books              |
+| Student     | ônî bêûdo                 | Learner                      |
+| Teacher     | foko bêûdo                | Make-learner                 |
+| Writer      | ônî cukto                 | Writer                       |
+
+## Nature & Food Service
+
+| English           | Hîsyêô                    | Literal Meaning                 |
+|-------------------|---------------------------|---------------------------------|
+| Baker             | ônî bîek                  | Baker                           |
+| Butcher           | ônî ondo oksûn            | Meat preparer                   |
+| Brewer            | ônî ondo yê îskô cûbû     | Fermented drink preparer        |
+| Chef              | ônî ondo yê côûfon        | Preparer of meals               |
+| Cook              | ônî côûfon                | Cook                            |
+| Farmer            | ônî lîun yê mokon         | Nurturer/Grower of food         |
+| Pastry chef       | ônî bîek cîbon sûît       | Sweet-related Fat-related Baker |
+| Waiter / Waitress | ônî cûdo yê côûfon gubuyo | Provider of store meals         |
+
+## Government & Services
+
+| English        | Hîsyêô                        | Literal Meaning            |
+|----------------|-------------------------------|----------------------------|
+| Civil servant  | ônî yoldûn fîmôsyôs           | Public helping one         |
+| Diplomat       | ônî hobîyô yê yôcno bolutê    | Announcer of foreign plans |
+| Firefighter    | ônî môtô                      | The fire one               |
+| Judge          | ônî tûlokon                   | "Judger"                   |
+| Police officer | ônî cixîn                     | Enforcer                   |
+| Politician     | ônî yundôû yê gonîso fîmôsyôs | Guider of public opinion   |
+| Prosecutor     | ônî fohoso yê fûtsûn          | Examiner of law            |
+| Soldier        | ônî oklumun                   | The attack one             |
+| Mail carrier   | ônî okôt yê lufono            | Carryer of packages        |
+
+## Homes & Real Estate
+
+| English           | Hîsyêô             | Literal Meaning             |
+|-------------------|--------------------|-----------------------------|
+| Gardener          | ônî lîun comen     | Garden grower               |
+| Maid / Cleaner    | ônî mûfêû yê niwos | The clean one of residences |
+| Real-estate agent | ônî wedo yê niwos  | Exchanger of houses         |
+
+## Medical
+
+| English      | Hîsyêô                            | Literal Meaning               |
+|--------------|-----------------------------------|-------------------------------|
+| Patient      | ônî cîgîlsu                       | The treatment one             |
+| Dentist      | ônî cûdo yê cîgîlsu hokôlî        | Giver of tooth treatments     |
+| Doctor       | ônî cûdo yê cîgîlsu solîlo        | Giver of body treatments      |
+| Nurse        | ônî yoldûn cîgîlsu                | Treatment helpful one         |
+| Optician     | ônî cûdo yê cîgîlsu gûêyû         | Giver of eye treatment        |
+| Pharmacist   | ônî ondo cîgîlsu                  | Treatment preparer            |
+| Nutritionist | ônî cûdo yê yôcno kon mokon sohoû | Giver of healthy eating plans |
+| Psychiatrist | ônî cûdo yê cîgîlsu dûuncît       | Giver of mind treatments      |
+| Psychologist | ônî fohoso yê cîgîlsu dûuncît     | Examiner of mind treatments   |
+| Veterinarian | ônî cûdo yê cîgîlsu zonwul        | Giver of animal treatments    |
+
+## Talking about Jobs
+
+The word <HisyeoWord is='wêloi'/> is a verb that means "to work [as]" which
+means that object of this transitive verb is the occupation. Therefor, to ask
+somebody their profession, just use the interrogative pronoun in place of object.
+
+<HisyeoTabs>
+    <p>¿nîmû wêloi zik?&emsp;<em>What is your occupation?</em>&emsp;<small>(lit: You work as what?)</small></p>
+</HisyeoTabs>
+
+When answering this question, you treat the profession description as the object of the verb (often times with a null subject).
+
+<HisyeoTabs>
+    <p>(noyo) wêloi ônî cingî.&emsp;<em>I am an electrician.</em>&emsp;<small>(lit: I work as an elictricity one.)</small></p>
+    <p>(noyo) wêloi ônî cûdo yê cîgîlsu hokôlî.&emsp;<em>I am a dentist.</em>&emsp;<small>(lit: I work as a giver of teeth treatments.)</small></p>
+</HisyeoTabs>
+
+If you want to ask where someone works, you can skip the theme and use a locative preposition.
+
+<HisyeoTabs>
+    <p>¿nîmû wêloi hoî zik?&emsp;<em>Where do you work?</em></p>
+</HisyeoTabs>
 
 <HisyeoTooltip />
