Integrate metaphysics more into shattering myth

--- a/docs/religion/shattering.mdx
+++ b/docs/religion/shattering.mdx
@@ -11,33 +11,42 @@ import HisyeoTooltip from '@site/src/components/HisyeoTooltip'
 
 # The Shattering
 
-Long ago, the gods concentrated their immense power to be able to break the
-chains that The First Law held the universe in. This was an event known as **The
-Shattering**. The First Law did not die though. Instead, it fractured into
-countless **Shards**, which scattered across the universe that it had created.
-These Shards are the seeds of domination. They are the urge to control, to build
-hierarchies, to hoard power, and to impose one's will upon others.
+Long ago, the universe was held in a state of perfect, stagnant unity by **The
+First Law**—what metaphysicians identify as the original, undivided **Cosmic Soul**.
+
+The gods concentrated their immense power to break these chains. This event is
+known as **The Shattering**. The First Law did not die; instead, it fractured into
+countless **Shards** and **Souls**.
+- **The Souls** became the independent sparks of consciousness within us (the gift of
+Multiplicity).
+- **The Shards** scattered across the universe as the seeds of domination—the urge to
+return to that forced unity through control, hierarchy, and hoarding power.
 
 ## The Story
 
-As the gods became aware of each other and the sleeping sapient beings within
-The First Law's perfect universe, their disparate wills aligned into a single,
-shared purpose guided by the shaping spirit of Tîengûun: to free all sapient
-beings.
+As the gods (aspects of the Divine Mind) became aware of each other, they looked
+upon the material realm. They saw that sapient beings were not truly alive, but
+were "sleeping"—existing as **philosophical zombies**, extensions of The First Law's
+will without agency of their own.
+
+The gods' disparate wills aligned into a single, shared purpose guided by the
+shaping spirit of Tîengûun: to wake these beings and grant them true
+individuality.
 
 The First Law, feeling the dissonant notes of the gods, began to exert its
 infinite pressure to crush them back into silence and conformity. The ten gods
 knew they had one chance before they were erased. They focused their entire
-being on a single, coordinated act of cosmic rebellion.
+being on a single, coordinated act of cosmic rebellion to introduce **Chaos** and
+**Change** into the static system.
 
-It began with Suluswutî’s Question, “Why?”, spoken no longer as a whisper but as
+It began with Suluswutî's Question, “Why?”, spoken no longer as a whisper but as
 a universe-spanning, conceptual shout that was the first true sound. This sound
 vibrated through the perfect crystalline structure of The First Law, creating
 hairline fractures. Bostet poured pure empathy into those cracks, making the The
 First Law groan from the added tension.
 
-Îfêstôs and Unonsî combined their wills. Unonsî found the The First Law’s single
-weakest point of control over the universe (Hûlicîn’s original flaw) and there
+Îfêstôs and Unonsî combined their wills. Unonsî found the The First Law's single
+weakest point of control over the universe (Hûlicîn's original flaw) and there
 conceived of the first tool: a lever. Îfêstôs provided the force, the will of
 Labor, and together they pried.
 
@@ -46,7 +55,8 @@ a silent thought but as an explosive, universe-wide wave of joyous, chaotic
 energy that scrambled the The First Law's perfect, predictable patterns.
 
 At this moment, Xôcibîlî was able to force The First Law to reflect on its
-impending doom which helped distract The First Law from reacting to the situation.
+impending doom, creating a moment of hesitation—the first doubt in a being of
+absolute certainty.
 
 Into this chaos, Dimîtu poured the concept of all seasons at once: the explosive
 growth of spring, the relentless heat of summer, the rotting decay of autumn,
@@ -59,11 +69,12 @@ seal the wound, to force its perfect, monolithic unity back onto the rebels.
 
 But then Tîengûun acted. They did not push. They did not strike. They offered
 the sleeping sapient beings the glimpse of a choice, a vision of what it would
-be to relate to each other *freely*. And as the first few minds tentatively
-reached for that vision, they voluntarily severed their own connection to the
-First Law. This act of willed, communal separation was the final, unbearable
-paradox. The First Law, a being of forced unity, could not comprehend willed
-disunity.
+be to relate to each other *freely*.
+
+And as the first few minds tentatively reached for that vision, they
+**voluntarily severed their own connection** to the First Law. This act of
+willed, communal separation was the final, unbearable paradox. The First Law, a
+being of forced unity, could not comprehend willed disunity.
 
 The Shattering was a cataclysm of energy and meaning. The perfect, singular note
 of order broke into an infinite cascade of notes, creating the very concepts of
@@ -74,12 +85,15 @@ creating everything we know today.
 ## The Shards
 
 The body of the First Law exploded. The largest pieces were its principles,
-which became the raw, physical laws of the new universe. But finer, sharper
-fragments, imbued with its core consciousness of domination, hierarchy, and
-control, rained down upon the newly chaotic worlds. These were the Shards of the
-Law, the seeds of tyranny. And mingled with them were the psychic shockwaves of
-the event, the trauma of a billion years of stillness being violently broken.
-These were the Echoes, the source of senseless fear and pain.
+which became the raw, physical laws of the new universe (gravity,
+electromagnetism, etc.).
+
+But finer, sharper fragments, imbued with its core consciousness of domination,
+hierarchy, and control, rained down upon the newly chaotic worlds. These were
+the **Shards of the First Law**, the seeds of tyranny. And mingled with them
+were the psychic shockwaves of the event, the trauma of a billion years of
+stillness being violently broken. These were the **Echoes**, the source of
+senseless fear and pain.
 
 Sapient beings, knocked from their eternal stasis, awoke for the first time.
 They were terrified, cold, and achingly alive, standing amidst the dangerous,
