--- a/docs/religion/great-weave.mdx
+++ b/docs/religion/great-weave.mdx
@@ -11,89 +11,80 @@ import HisyeoTooltip from '@site/src/components/HisyeoTooltip'
 
 # The Great Weave
 
-Through a carefully orchestrated combination of the gods' powers, **The Great
-Weave** was built. It is a garden of gigantic "trees" where each branch is a
-sapient being's life story which is added when they traverse to the other side
-and each root of the trees or thread of the mycelia is a soul encoded by the
-gods into so-called Threads of the Great Weave.
+Through a carefully orchestrated combination of the gods' powers, The **Great
+Weave** was built. Metaphysically, this is the project of reconstructing the
+**Cosmic Soul**.
+
+Where the [First Law](./first-law) was a single, stagnant block of forced unity,
+the Great Weave is a dynamic, living tapestry. It is a garden of gigantic
+"trees" where each branch is a sapient being's life story, and each root is a
+soul—a "thread"—woven together to create a unity that preserves the distinct
+**multiplicity** of every individual.
 
 ## Transition
 
-When the body’s work is done, when Îfêstôs’s strong materials grow tired and the
-vibrant song of Kulîôbî fades from the flesh, the journey does not end. It
-simply *changes*. This is not a moment for fear, for there is no judgment, no
-final test to pass. There is only the gentle, steady presence of Bostet.
+When the body's work is done, when [Îfêstôs](./gods/îfêstôs.mdx)'s strong materials grow tired and the
+vibrant song of [Kulîôbî](./gods/kulîôbî.mdx) fades from the flesh, the journey does not end. It
+simply *changes*.
 
-Bostet, who greets us at birth, is there to accompany us at our departure. They
-are the midwife of our final breath. Their warmth surrounds the spirit, ensuring
-the crossing is not a violent tear, but a soft unfurling, a release. The unique,
-unrepeatable spark of your self—the precious, one-of-a-kind identity so valued
-by Xôcibîlî—is carefully cupped in their hands and guided away from the silent
-vessel of the body.
+[Bostet](./gods/bostet), who greets us at birth, is there to accompany us at our
+departure. They are the midwife of our final breath. Their warmth surrounds the
+spirit, ensuring the crossing is not a violent tear, but a soft unfurling. The
+unique, unrepeatable spark of your self—your **Individual Soul**, now rich with
+the **Multiplicity** of your experiences—is carefully cupped in their hands.
 
-But you are not cast into a void, nor do you stand alone. You are guided to **The
-Great Weave**.
+You are not cast into a void. You are guided to the **Re-unified Cosmic Soul**:
+The Great Weave.
 
 ## The Place
 
-Imagine the most ancient and loving forest, a vision of Dimîtu’s deepest work.
+Imagine the most ancient and loving forest, a vision of [Dimîtu](./gods/dimîtu.mdx)'s deepest work.
 Now imagine that the true life of that forest is not in the towering trees, but
 in the vast, interconnected network of roots and mycelium hidden in the rich
-soil below. The Great Weave is just like this. It is the spiritual afterlife of
-the universe, a place where every spirit who has ever lived exists as a bright,
-conscious point of light within a boundless, interconnected tapestry.
+soil below.
 
-Here, your spark remains you. Your memories, your laughter, your hard-won
-knowledge, and your love are not erased. Xôcibîlî receives you from Bostet and
-transfers you into a sacred spirit thread designed by Unonsî, glowing with your
-own particular color. Afterwards, through the labor of Îfêstôs, you are finally
-woven into the Tîêngûun's greatest community. During the weaving ceremony,
-Dimîtu takes the energy that you bring to the roots and mycelia of the forest
-and grows your unique branch within the garden.
+This is the spiritual reality of the universe. It is where the [Divine Mind](./metaphysics#the-divine-mind)
+observes itself through the sum of all lives.
 
-In the Great Weave, you can feel the presence of your ancestors, not as dim
-ghosts, but as vibrant, loving beings. You can share stories with a hero from a
-forgotten age, learn a lost craft from a master, or simply rest in the
-comforting, collective presence of all who have gone before. The Great Weave is
-a library of souls, where the act of learning, so cherished by Suluswutî,
-becomes the very essence of existence.
+Here, your spark remains *you*. The Shattering gave you the gift of
+individuality, and the Great Weave preserves it. [Xôcibîlî](./gods/xôcibîlî.mdx) receives you from
+Bostet and transfers you into a sacred spirit thread designed by [Unonsî](./gods/unonsî.mdx). Through
+the labor of Îfêstôs, you are woven into the [Tîêngûun](./gods/tîêngûun.mdx)'s greatest community.
+
+In the Great Weave, the paradox of the First Law is resolved: you are **One** with
+the universe (Unity), yet you remain distinctively **Yourself** (Multiplicity). You
+can feel the presence of your ancestors, share stories with heroes of old, and
+rest in the comforting collective consciousness.
 
 ## The Connection
 
-And you are not cut off from the world you left behind. The Great Weave touches
-the living world in countless ways. When your loved ones tell a story about you,
-when they laugh at a shared memory, it sends a pulse of light and warmth down
-your thread. When a musician plays a song you loved, you can feel the rhythm.
-You become part of the Ancestral Loom that offers guidance and strength, a quiet
-but present echo in the lives of those you touched.
+You are not cut off from the [Material Dream](./metaphysics#the-material) you
+left behind. The Great Weave touches the living world in countless ways.
+
+When your loved ones tell a story about you, it sends a pulse of light down your
+thread. When a musician plays a song you loved, you feel the rhythm. You become
+part of the Ancestral Loom that offers guidance and strength to those still
+navigating the dream of the material plane.
 
 ## The Return
 
 For many, this eternal, peaceful communion is a perfect existence. But the
-Liberator gods value choice above all else. After an age of learning and sharing
-within the Great Weave, a spirit may feel a pull to live again—to feel the sun
-on their skin, to build something new with their hands, to sing a new song. This
-is the choice of Return.
+[Liberator gods](/docs/category/gods) value choice above all else.
 
-It is not a blank-slate rebirth, but a beautiful and collaborative act of
-creation. The spirit who chooses to return becomes the "heart-thread" of a new
-life. They then gather other threads from the Great Weave to join them. A mother
-might invite a thread from her own beloved grandmother to be woven into her
-child, granting them a familiar sense of comfort. A community might collectively
-offer threads of courage and skill from its most cherished ancestors to a child
-born in challenging times.
+After an age of learning within the Cosmic Soul, a spirit may feel a pull to
+return to the **Dream**—to feel the sun on their skin, to build something new,
+to help others still trapped by the [Shards](./shattering#the-shards). This is
+the choice of Return.
 
-Thus, a new life is a unique and beautiful knot in the Great Weave. Each person
-is their own sovereign self, a new identity cherished by Xôcibîlî, yet they
-carry within them the loving echoes, talents, and strengths of those who came
-before. It’s why a child might have a laugh that reminds everyone of a
-great-uncle, or an innate talent for a craft they’ve never been taught. They are
-a new song, composed of beloved, ancestral notes.
+It is not a blank-slate rebirth, but a collaborative act of creation. The spirit
+who chooses to return becomes the "heart-thread" of a new life. They then gather
+other threads from the Great Weave to join them. A mother might invite a thread
+from her own grandmother to be woven into her child; a community might offer
+threads of courage from cherished ancestors.
 
-So we do not mourn as those without hope. We care for the body, a vessel that
-did good work. We tell the stories, to keep the threads of our loved ones bright
-and warm in the Great Weave. And we welcome every new child as a living tapestry
-of history and promise, a beloved amalgamation of our ancestors choosing to
-wander with us once more.
+Thus, a new life is a unique knot in the Great Weave. Each person is a sovereign
+Individual Soul, yet they carry within them the loving echoes of those who came
+before. They are a new song, composed of beloved, ancestral notes, choosing to
+wander the Dream once more.
 
 <HisyeoTooltip />
