Add more custom script support to enders doc

--- a/docs/language/word_types/enders.mdx
+++ b/docs/language/word_types/enders.mdx
@@ -21,9 +21,11 @@ Currently, the only true clause ender is the comma, and it is treated as a sligh
 
 ### The Comma
 
-Unlike some constructed languages (like Kokanu) that use a spoken word for
-commas to separate nested clauses, Hîsyêô relies on its distinct prepositional
-structure to handle complexity. Therefore, the comma is purely prosodic.
+Unlike some constructed languages (like
+[Kokanu](https://en.kokanu.com/reference/special-words/hu.html)) that use a
+spoken word for commas to separate nested clauses, Hîsyêô relies on its
+verb-converting particle words to reduce the reliance on them. Therefore, the
+comma is purely prosodic.
 
 <HisyeoTabs>
     <p>hôn fos nîmû li nô, kûu xokûlû noyo.&emsp;<em>If you go, call me.</em></p>
@@ -44,12 +46,13 @@ Declarative/Neutral.
 | <HisyeoWord is='foxo'/>   | Surprise     | Wow! / Whoa!         | Mirative      |
 | <HisyeoWord is='ze'/>     | Emotion      | ! / Damn!            | Exclamatory   |
 
-### Politeness (lôtfen)
+### Politeness
 
 **Mood:** Precative / Softening
 
-This particle softens a command into a request or simply adds a layer of respect
-to a statement. It is used with friends and superiors alike to show care.
+The politeness ender ( <HisyeoWord is='lôtfen'/> ) softens a command into a
+request or simply adds a layer of respect to a statement. It is used with
+friends and superiors alike to show care.
 
 #### Advanced Usage
 
@@ -58,7 +61,7 @@ mood of the sentence significantly.
 
 :::note Permissive Mood
 
-**Marker:** Epistemic (kôî) + lôtfen
+**Marker:** Epistemic ( <HisyeoWord is='kôî'/> )&emsp;+&emsp;<HisyeoWord is='lôtfen'/>
 
 **Meaning:** Granting permission or authorization. It changes "can" into "may."
 
@@ -70,7 +73,7 @@ mood of the sentence significantly.
 
 :::note Concessive Mood
 
-**Marker:** Epistemic (kôî) + lôtfen
+**Marker:** Epistemic ( <HisyeoWord is='kôî'/> )&emsp;+&emsp;<HisyeoWord is='lôtfen'/>
 
 **Meaning:** Admitting a point in an argument or acknowledging a possibility
 politely. It changes "might" into "granted" or "admittedly."
@@ -83,7 +86,7 @@ politely. It changes "might" into "granted" or "admittedly."
 
 :::note Benedictive Mood
 
-**Marker:** Deontic (kûu) + lôtfen
+**Marker:** Deontic ( <HisyeoWord is='kûu'/> ) + <HisyeoWord is='lôtfen'/>
 
 **Meaning:** Expressing a blessing, well-wishing, or hope for the future. It
 changes "should" into "may."
@@ -94,23 +97,23 @@ changes "should" into "may."
 
 :::
 
-### Question (ko)
+### Question
 
 **Mood:** Interrogative
 
-This is the standard particle for turning a statement into a Yes/No question. It
-asks for a truth value.
+The question ender ( <HisyeoWord is='ko'/> ) is the standard particle for
+turning a statement into a Yes/No question. It asks for a truth value.
 
 <HisyeoTabs>
     <p>nîmû li xôn ko?&emsp;<em>Are you well?</em></p>
     <p>nîo ke li nô ko?&emsp;<em>Is she going to go?</em></p>
 </HisyeoTabs>
 
-### Proposal (cî)
+### Proposal
 
 **Mood:** Propositive / Suggestive
 
-Unlike ko, which asks for facts, cî asks for agreement or consent. It turns a
+Unlike <HisyeoWord is='ko'/>, which asks for facts, <HisyeoWord is='cî'/> asks for agreement or consent. It turns a
 statement into a suggestion or a check-in.
 
 <HisyeoTabs>
@@ -123,7 +126,7 @@ statement into a suggestion or a check-in.
 
 :::note Propositive Mood
 
-**Marker:** Deontic (kûu) + cî
+**Marker:** Deontic (<HisyeoWord is='kûu'/>)&emsp;+&emsp;<HisyeoWord is='cî'/>
 
 **Meaning:** A direct suggestion or proposal for action.
 
@@ -135,7 +138,7 @@ statement into a suggestion or a check-in.
 
 :::note Hypothetical / Tentative Mood
 
-**Marker:** Epistemic (kôî) + cî
+**Marker:** Epistemic (<HisyeoWord is='kôî'/>)&emsp;+&emsp;<HisyeoWord is='cî'/>
 
 **Meaning:** Staking a belief that a statement is possible or likely. It
 expresses a tentative hypothesis or potential event.
@@ -148,7 +151,7 @@ expresses a tentative hypothesis or potential event.
 
 :::note Gnomic Mood
 
-**Marker:** Realis (Unmarked) + cî
+**Marker:** Realis ( Unmarked )&emsp;+&emsp;<HisyeoWord is='cî'/>
 
 **Meaning:** While sometimes a simple proposal, this often indicates a general
 truth or principle about the universe (aorist/gnomic) that the speaker is
@@ -160,11 +163,11 @@ validating.
 
 :::
 
-### Confirmation (lôîcôk)
+### Confirmation
 
 **Mood:** Assertive / Emphatic
 
-This particle asserts that the statement is true, often contrary to doubt or as
+The confirmation ender ( <HisyeoWord is='lôîcôk'/> ) asserts that the statement is true, often contrary to doubt or as
 a validation of someone else's statement. It acts like the English emphatic
 auxiliary "do/did."
 
@@ -178,11 +181,11 @@ auxiliary "do/did."
     <p>nîmû kûu li yoûmok lôîcôk.&emsp;<em>Surely, you must be joking.</em>&emsp;<small>(Strong inference)</small></p>
 </HisyeoTabs>
 
-### Surprise (foxo)
+### Surprise
 
 **Mood:** Mirative
 
-This marks information that is new, unexpected, or surprising to the speaker. It
+The <HisyeoWord is='foxo'/> ender marks information that is new, unexpected, or surprising to the speaker. It
 is the vocal equivalent of a wide-eyed facial expression.
 
 <HisyeoTabs>
@@ -191,13 +194,13 @@ is the vocal equivalent of a wide-eyed facial expression.
     <p>nîo ke li zîgîl foxo.&emsp;<em>Whoa, they are going to fall!</em>&emsp;<small>(Sudden realization)</small></p>
 </HisyeoTabs>
 
-### Emotion (ze)
+### Emotion
 
 **Mood:** Exclamatory / Aggressive
 
-This particle adds intense emotional weight. It can range from strong
-encouragement to anger or frustration. It effectively replaces swear words by
-infusing the sentence with raw intensity.
+The <HisyeoWord is='ze'/> ender adds intense emotional weight. It can range
+from strong encouragement to anger or frustration. It effectively replaces swear
+words by infusing the sentence with raw intensity.
 
 <HisyeoTabs>
     <p>kûu lîsto ze!&emsp;<em>Stop!</em>&emsp;<small>(Command)</small></p>
